# inclusive

./: .gitignore  .pylintrc  CONTRIBUTE.md  MANIFEST.in  README.md  RELEASE.md  configuration.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: codeql-analysis.yml  pylint.yml  pythonpackage.yml
inclusive/: file_utils.py  main.py  suggestions.py  unicode_utils.py
inclusivewriting/: __init__.py  __main__.py  configuration.json  configuration.py  file_utils.py  initialize.py  locale_utils.py  main.py  path_utils.py  rulepacks.py  rules.py  schema_utils.py  suggestions.py  text_utils.py  unicode_utils.py  version.py
inclusivewriting/locales/: inclusivewriting.bot
inclusivewriting/locales/fr_FR/LC_MESSAGES/: inclusivewriting.po
inclusivewriting/resources/: README.md  __init__.py  conf.py  inclusivewriting.resources.rst  inclusivewriting.rst  index.rst  modules.rst  separators.txt
inclusivewriting/resources/en/: README.md  list.json  pronouns.json
inclusivewriting/resources/fr/: README.md  list.json  pronouns.json
locales/: inclusive.bot
locales/en/LC_MESSAGES/: inclusive.po
locales/en_US/LC_MESSAGES/: inclusive.po  inclusivewriting.po
locales/fr/LC_MESSAGES/: inclusive.po
locales/fr_FR/LC_MESSAGES/: inclusive.po
resources/: README.md  __init__.py
resources/en/: README.md  list.json  pronouns.json
tests/: __init__.py  cli_test.py  file_utils_test.py  locale_utils_test.py  resource_schema_test.py  rulepacks_test.py  rules_test.py  suggestions_test.py  tests.py  unicode_utils_test.py
